feat: add reporting service to docker-compose and refactor API to accept department_id as query parameter
